syntax = "proto3";

package product;

message ErrorResponse {
  string message = 1;
  string details = 2;
}

message MetaResponse {
  Pagination pagination = 1;

  message Pagination {
    int32 total = 1;
    int32 page = 2;
    int32 limit = 3;
  }
}
service ProductService {
  rpc AddProduct (AddProductRequest) returns (AddProductResponse);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc GetAllProducts (GetAllProductsRequest) returns (GetAllProductsResponse);
}

message AddProductRequest {
  string name = 1;
  double price = 2;
  string description = 3;
  int32 stock = 4;
  string sellerId = 5;
}

message AddProductResponse {
  bool success = 1;
  int32 code = 2;
  ProductData data = 3;
  ErrorResponse error = 4;
  MetaResponse meta = 5;
}

message ProductData {
  string productId = 1;
}

message GetProductRequest {
  string productId = 1;
}

message GetProductResponse {
  bool success = 1;
  int32 code = 2;
  ProductDetails data = 3;
  ErrorResponse error = 4;
  MetaResponse meta = 5;
}

message ProductDetails {
  string name = 1;
  double price = 2;
  string description = 3;
  int32 stock = 4;
  string sellerId = 5;
}

message GetAllProductsRequest {
  int32 page = 1;
}

message GetAllProductsResponse {
  bool success = 1;
  int32 code = 2;
  repeated Products data = 3;
  ErrorResponse error = 4;
  MetaResponse meta = 5;

  message Products {
    string productId = 1;
    string name = 2;
    double price = 3;
    string description = 4;
    int32 stock = 5;
    string sellerId = 6;
  }
}
